# cpp_standalone_lib

./: CMakeLists.txt
model_shared/: CMakeLists.txt
model_shared/include/model_shared/: log.hpp  model_shared.hpp
model_shared/lib/: log.cpp  model_shared.cpp
